Adjust maximum to 25
