# api-server/static/openapi.yaml
@@ -146,10 +146,10 @@ paths:
           type: integer
           default: 10
           minimum: 3
-          maximum: 50
+          maximum: 25
         name: limit
         in: query
-        description: Limit the number of results returned. The default value is 10, minimum is 3, and maximum is 50.
+        description: Limit the number of results returned. The default value is 10, minimum is 3, and maximum is 25.
       responses:
         '200':
           description: Successful Response
